[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "swatch-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "patchright>=1.50",
    "requests>=2.31",
]

[project.scripts]
swatch-scraper = "melchior:main"
swatch-test = "test_swatch_scraper:main"

[tool.setuptools.packages.find]
where = ["."]